# backendmodular

./: README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml  python-app.yml
backendmodular/: app.py  models.py  views.py
backendmodular/blueprints/api/: api_v1.py
backendmodular/ext/: swagger.py
backendmodular/templates/: index.html
migrations/versions/: 2e77b27fd7d0_primeira_versão_de_receita.py
tests/: fixtures.py  test_basicapp.py  test_blueprint_api.py  test_models.py
